# demiurge

./: .gitignore  .gitmodules  ARCHITECTURE_V2.md  ARCHITECTURE_V3.md  DEMIURGE.md  VISION.md  pyproject.toml
estimator/: __init__.py  object_tracker.py  state_estimator.py
eval/: benchmarks.py  probes.py  voe.py
eval/suite/: __init__.py  harness.py  ood_physics.py  pusht_ood.py
experiments/: eval_planning.py  physics_diagnostic.py  prompt.md  run_eval.py  run_ood_eval.py  sim2d.py  train_phase1.py  train_phase1_e2e.py  train_pusht.py  train_pusht_v3.py  train_pusht_v3_state.py  train_shield.py  train_temporal.py
experiments/ablations/A_lewm_baseline/: config.yaml
experiments/ablations/B_learnable_geom/: config.yaml
experiments/ablations/C_frozen_geom/: config.yaml
experiments/ablations/D_frozen_plus_gates/: config.yaml
experiments/ablations/E_full_demiurge/: config.yaml
layers/: __init__.py  modulation.py  nature.py  nurture.py
model/: __init__.py  demiurge.py  demiurge_v2.py  predictor.py  tokenizer.py
observer/: __init__.py  observer_head.py
scripts/: pod_setup.sh
simulator/: __init__.py  hybrid_simulator.py  interaction_modes.py  material_belief.py
training/: objectives.py  trainer.py
v3/: __init__.py  demiurge_v3.py  interaction_net.py  planner.py  shield.py  slots.py
