[project]
name = "demiurge"
version = "0.1.0"
description = "Structured JEPA world model with frozen geometric scaffold, modulation, and flexible context"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "einops>=0.7.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pymunk>=6.6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.16.0",
    "lightning>=2.2.0",
    "matplotlib>=3.8.0",
    "h5py>=3.10.0",
]

[project.optional-dependencies]
lewm = [
    "stable-worldmodel[train,env]",
    "stable-pretraining",
]
eval = [
    "phyre",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["v3*", "eval*"]
